--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
         onclick="window['dialog-id'].showModal();"
         aria-controls="dialog-id">
         <svg class="icon-floopy" viewBox="0 0 21 21" width="21" height="21">
-          <use href="./svg/floopy.svg#floopy">
+          <use href="svg/floopy.svg#floopy">
         </svg>
         <span class="button__text">
           Сохранить на память</span>
@@ -508,13 +508,13 @@
     <dialog class="dialog" id="dialog-id">
       
         <svg class="icon-floopy" viewBox="0 0 21 21" width="40" height="40">
-        <use href="./svg/floopy.svg#floopy">
+        <use href="svg/floopy.svg#floopy">
       </svg>
       <span class="dialog__text">Вставьте
         дискету, чтобы продолжить</span>
       
       <form method="dialog">
-        <button  type=" submit" class="dialog__button">
+        <button  type="submit" class="dialog__button">
          <span class="button__text">ок</span>
         </button>
         </form>
